syntax = "proto3";
package ueb03;

option go_package = "github.com/akelsch/vaa/ueb03/api/pb";

import "ControlMessage.proto";
import "ApplicationMessage.proto";
import "Election.proto";

message Message {
  string identifier = 1;
  string sender = 2;
  string receiver = 3;

  oneof msg {
    ControlMessage control_message = 4;
    ApplicationMessage application_message = 5;
    Election election = 6;
  }
}
